Bug 418517 - Titlebar text does not update correctly when title is fully to the left and no buttons are placed there.
Summary: Titlebar text does not update correctly when title is fully to the left and n...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: window decoration (other bugs)
Version First Reported In: 5.18.7
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 421568 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-05 20:53 UTC by park.dbbrk
Modified: 2022-03-23 20:26 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
Titlebar text error when changing Dolphin folders (2.69 MB, video/mp4)
2020-03-05 20:53 UTC, park.dbbrk
Details
it works as expected on Plasma 5.18.3, Breeze decoration (22.17 KB, image/png)
2020-03-13 17:22 UTC, Patrick Silva
Details
Screencast 2020-03-14 11:10:00.mp4 (2.30 MB, video/mp4)
2020-03-14 16:13 UTC, park.dbbrk
Details
attachment-11571-0.html (823 bytes, text/html)
2020-03-19 22:09 UTC, park.dbbrk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description park.dbbrk 2020-03-05 20:53:16 UTC
Created attachment 126615 [details]
Titlebar text error when changing Dolphin folders

SUMMARY
When the window title is set to the left side of titlebar and no buttons are positioned on the left side of titlebar, the text in the button position does not update correctly when the window title changes. 

STEPS TO REPRODUCE
1. Select a window decoration that allows placing the window title fully to the left; Breeze/Oxygen
2. Remove any buttons from the left side of titlebar and select window Title Alignment as LEFT
3. Click Apply
3. Open an application that dynamically updates the titlebar title; Dolphin
4. The Titlebar text will initially read; Home -- Dolphin
5. Change to the Videos folder
6. The Titlebar text will read: Hodeos -- Dolphin. The text in the place where a titlebar button normally would be does not update (the amount of unchanged test will depend on font size. Partial letters may be visible).
7. Shading the Dolphin window will update the Titlebar text to; Videos -- Dolphin


OBSERVED RESULT
The behavior applies to any application titlebar text that begins with dynamic text such as changing tabs in Firefox. 

EXPECTED RESULT
The Window titlebar text should update correctly when changing window contents. 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 19.10
(available in About System)
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.12.4

ADDITIONAL INFORMATION
Comment 1 Patrick Silva 2020-03-13 17:22:02 UTC
Created attachment 126764 [details]
it works as expected on Plasma 5.18.3, Breeze decoration

I can't reproduce on my system. See attached screenshot.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.3
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 2 park.dbbrk 2020-03-14 16:13:13 UTC
Created attachment 126784 [details]
Screencast 2020-03-14 11:10:00.mp4

Bug exists.

On Fri, Mar 13, 2020 at 12:23 PM Patrick Silva <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=418517
>
> Patrick Silva <bugseforuns@gmx.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>  Attachment #126764 [details]|it works as expected on     |it works as expected on
>         description|Plasma 5.18.3               |Plasma 5.18.3, Breeze
>                    |                            |decoration
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Vlad Zahorodnii 2020-03-19 10:06:29 UTC
What font do you use for titlebar text?
Comment 4 park.dbbrk 2020-03-19 22:09:00 UTC
Created attachment 126899 [details]
attachment-11571-0.html

Noto Sans 12. Have tried others; same bug.

On Thu, Mar 19, 2020 at 5:06 AM Vlad Zahorodnii <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=418517
>
> --- Comment #3 from Vlad Zahorodnii <vlad.zahorodnii@kde.org> ---
> What font do you use for titlebar text?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 5 Patrick Silva 2020-05-16 01:24:09 UTC
*** Bug 421568 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2022-02-04 13:44:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/178
Comment 7 Janet Blackquill 2022-03-14 15:31:35 UTC
Git commit 03b29c9fe9325f6ede8eaafe050650112acad705 by Jan Blackquill, on behalf of Richard Shiue.
Committed on 14/03/2022 at 15:31.
Pushed by cblack into branch 'master'.

kdecoration: fix visual glitch in titlebar caption when it is updated near the edge

The geometry of the the title bar is not being correctly updated. The bug affects all C++-based window decorations (breeze, oxygen, even lightly) and can be observed when there isn't any title bar buttons to the left of the caption and the caption is changed (e.g. changing directories in dolphin), regardless of the alignment as long as the caption becomes close to the left edge. This makes sure that updateTitlebar sets the title bar's geometry in Decoration coordinates.

M  +3    -8    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/commit/03b29c9fe9325f6ede8eaafe050650112acad705
Comment 8 Bug Janitor Service 2022-03-22 10:56:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/201
Comment 9 Vlad Zahorodnii 2022-03-23 08:46:05 UTC
Git commit 0606fd81387dc005adf90227edef4c0e79a333c0 by Vlad Zahorodnii.
Committed on 23/03/2022 at 08:42.
Pushed by vladz into branch 'master'.

Revert "kdecoration: fix visual glitch in titlebar caption when it is updated near the edge"

This reverts commit 03b29c9fe9325f6ede8eaafe050650112acad705.

The reverted commit broke resizing decorated windows by dragging
decoration edges, e.g. top edge.

M  +9    -3    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/commit/0606fd81387dc005adf90227edef4c0e79a333c0
Comment 10 Nate Graham 2022-03-23 20:26:22 UTC
Git commit 5fa8abe6fb9405fe26c7ce955c76c126e80c130d by Nate Graham, on behalf of Paul McAuley.
Committed on 23/03/2022 at 20:26.
Pushed by ngraham into branch 'master'.

Use correct spacing factor for TitleBar_SideMargin

This commit fixes the glitches in titlebar caption when it is updated near
the edge. These glitches were caused by the Titlebar_SideMargin being
multiplied by the incorrect largeSpacing factor when smallSpacing is used
in every other instance.

M  +2    -2    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/commit/5fa8abe6fb9405fe26c7ce955c76c126e80c130d